--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,10 +8,10 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/brand" >
         <activity
             android:name=".PresenceActivity"
-            android:label="@string/app_name"
+            android:label="@string/brand"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
