added report display class and moved the fetching logic to this class

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:icon="@drawable/presence"
@@ -43,7 +43,12 @@
             android:label="@string/report"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-         <activity
+        <activity
+            android:name=".ReportDisplayActivity"
+            android:label="@string/report"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        <activity
             android:name=".IncidenceActivity"
             android:label="@string/incidence"
             android:theme="@android:style/Theme.NoTitleBar" >
